# riot_transmute

./: .gitignore  pyproject.toml
.github/workflows/: pr_tests_python.yml
riot_transmute/common/: constants.py
riot_transmute/v4/: match_timeline_to_game.py
riot_transmute/v5/: match_timeline_to_game.py  match_to_game.py
tests/data/v5/: LOLTMNT01_277109.json  LOLTMNT01_277109_timeline.json  LOLTMNT99_135042.json  LOLTMNT99_135042_timeline.json
tests/v4/: test_match_to_game_v4.py
tests/v5/: test_v5.py
