[tool.poetry]
name = "riot_transmute"
version = "2.1.11"
description = "Transmute Riot API objects to the community-defined DTO"
authors = ["mrtolkien <gary.mialaret@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
lol-dto = {git = "https://github.com/Leaguepedia/lol_dto.git"}


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
riotwatcher = "^3.3.0"
lol-id-tools = {git = "https://github.com/Leaguepedia/lol_id_tools.git"}
python-dotenv = "^1.2.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
